# ai-review

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  browser-poller.ts  styles.css  tauri.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  github.rs  lib.rs  lmstudio.rs  reviewer.rs  state.rs
src/components/: PrGroupRow.tsx
src/pages/: Activity.tsx  Dashboard.tsx  Insights.tsx  Models.tsx  Repos.tsx  Settings.tsx
